--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/jkcryptolock/Historical-Event-Finder#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "axios": "^0.19.0",
     "json-server": "^0.15.1",
     "path": "^0.12.7",
     "react": "^16.9.0",
